--- a/index.html
+++ b/index.html
@@ -3,54 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>課表</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <title>Hi! This is Ken.</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="vnb__menu-options vnb__menu-options--left"></div>
-            <ul class="nav_links">
-                <li><a href="#">本日課程</a></li>
-                <li><a href="https://oaa.ntut.edu.tw/var/file/8/1008/img/2878/109Calender.pdf">行事歷</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="wrapper">
-    <div class="course" style="width:450px; display: inline-block;">
-        <div style="text-align: left;max-width: 420px;margin:0px auto;margin-left:10px;"><H1>本日課程</H1></div>
-    <!-- </div>
-    <div class="t_table" style="display:inline-block;height: 600px;;padding:30px;">
-            <table class="timetable"style="margin:0 auto;">
-                <thead>
-                    <tr>
-                        <th class="c1"></th>
-                        <th class="otherC">一</th>
-                        <th class="otherC">二</th>
-                        <th class="otherC">三</th>
-                        <th class="otherC">四</th>
-                        <th class="otherC">五</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- <tr>
-                        <th class="c1"></th>
-                        <th class="otherC"></th>
-                        <th class="otherC"></th>
-                        <th class="otherC"></th>
-                        <th class="otherC"></th>
-                        <th class="otherC"></th>
-                    </tr> -->
-                </tbody> 
+    <div style="font-family: sans-serif; text-align: center;">
+ <h1>您好哇，我是 Ken!</h1>
 
-            </table>
-            
-            </div>
-    </div> -->
+ <p>這裏是 github page 的首頁，</p>
+ <p>如果想了解更多，</p>
+ <a href="https://kenforever.eth.limo">請點擊這裏！</a>
+ </div>
 </body> 
-
-<script src="./js/dailyCourse.js"></script>
-<!-- <script src="./TimeTable.js"></script> -->
 </html>
 
